Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6108

Built-in eval() function crashes if there's a debugger attached

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 4.6.0
    • 4.6.0
    • Qt Script
    • None

      When a QScriptEngineDebugger is attached to a QScriptEngine, the following script causes a crash:

      eval('a = 10')

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kenthans Kent Hansen (Inactive)
            kenthans Kent Hansen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes